--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -87,6 +87,8 @@ jobs:
       - name: Update comment with test running state
         if: steps.check-deployment.outputs.deployment_url && steps.find-pr.outputs.pr_number
         uses: actions/github-script@v7
+        env:
+          PR_NUMBER: ${{ steps.find-pr.outputs.pr_number }}
         with:
           script: |
             const deploymentUrl = '${{ steps.check-deployment.outputs.deployment_url }}';
@@ -98,7 +100,7 @@ jobs:
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: parseInt(process.env.PR_NUMBER),
+              issue_number: Number(process.env.PR_NUMBER),
             });
 
             const botComment = comments.find(comment => 
@@ -117,7 +119,7 @@ jobs:
               await github.rest.issues.createComment({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: parseInt(process.env.PR_NUMBER),
+                issue_number: Number(process.env.PR_NUMBER),
                 body: comment
               });
             }
@@ -142,13 +144,15 @@ jobs:
           destination_dir: ${{ github.event.workflow_run.head_sha || github.sha }}
 
       - name: Comment on PR
-        if: always() && steps.find-pr.outputs.pr_number
+        if: always() && steps.find-pr.outputs.pr_number && steps.upload-results.outputs.object_locations
         uses: actions/github-script@v7
+        env:
+          PR_NUMBER: ${{ steps.find-pr.outputs.pr_number }}
         with:
           script: |
             const testStatus = '${{ steps.test-run.outcome }}';
             const deploymentUrl = '${{ steps.check-deployment.outputs.deployment_url }}';
-            const locations = ${{ steps.upload-results.outputs.object_locations }} || [];
+            const locations = ${{ steps.upload-results.outputs.object_locations }}
 
             // Find the HTML report URL
             const htmlReportUrl = locations.find(url => url.endsWith('html/index.html'));
