--- a/config/test.env
+++ b/config/test.env
@@ -1,2 +1,12 @@
 DATABASE_URL='postgresql://postgres:postgres@localhost:5434/apadana_test'
 RESEND_API_KEY='re123_fake_RESEND_API_KEY'
+GOOGLE_MAPS_API_KEY=fake
+RESEND_API_KEY=fake
+NEXT_PUBLIC_S3_UPLOAD_BUCKET=fake
+NEXT_PUBLIC_S3_UPLOAD_REGION=fake
+S3_UPLOAD_KEY=fake
+S3_UPLOAD_SECRET=fake
+APPLE_TEAM_ID=fake
+APPLE_KEY_ID=fake
+APPLE_CLIENT_ID=fake
+APPLE_PRIVATE_KEY=fake
