--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "docker:prune": "docker system prune -af --volumes",
     "docker:clean": "docker-compose -f src/docker/docker-compose.yml down -v",
     "docker:down": "docker-compose -f src/docker/docker-compose.yml down",
+    "docker:build": "docker-compose -f src/docker/docker-compose.yml build",
     "next:start": "next start",
     "predev": "pnpm prisma:generate && pnpm prisma:migrate",
     "dev": "concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
@@ -72,6 +73,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@storybook/addon-themes": "^8.4.7",
     "@types/lodash": "^4.17.13",
+    "@types/semver": "^7.5.8",
     "@vercel/analytics": "^1.4.1",
     "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.1.0",
