--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
+      - name: Install Playwright Browsers
+        uses: ./.github/actions/playwright
+
       - name: Set up Docker
         uses: docker/setup-buildx-action@v3
 
