--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -7,7 +7,6 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./certs:/etc/nginx/certs:ro
-      - ./certs/rootCA.pem:/usr/local/share/ca-certificates/rootCA.crt:ro
     depends_on:
       app_dev:
         condition: service_healthy
@@ -21,8 +20,11 @@ services:
         echo '' && 
         echo '' && 
         echo '' && 
-        echo '⚡️ Now you can access https://apadana.dev.local' && 
-        echo '  and                 https://apadana.prod.local' && 
+        echo '┌──────────────────────────────────────────────┐' && 
+        echo '│            Now you can access                │' && 
+        echo '│            https://dev.apadana.local         │' && 
+        echo '│            https://prod.apadana.local        │' && 
+        echo '└──────────────────────────────────────────────┘' && 
         echo '' && 
         echo '' && 
         echo '' && 
@@ -111,7 +113,12 @@ services:
         condition: service_healthy
     networks:
       - apadana_network
-    command: sh -c "pnpm prisma:migrate && pnpm prisma db seed && pnpm next:start"
+    command: >
+      sh -c "
+        pnpm prisma:migrate && 
+        pnpm prisma db seed && 
+        pnpm next:start
+      "
     healthcheck:
       test:
         ['CMD', 'wget', '--spider', '-q', 'http://localhost:3030/api/health']
