--- a/package.json
+++ b/package.json
@@ -164,13 +164,13 @@
     "vitest": "^1.6.0"
   },
   "lint-staged": {
-    "**/*.{js,jsx,ts,tsx}": [
+    "*.{js,jsx,ts,tsx}": [
       "pnpm prisma:generate",
       "eslint --max-warnings=0 --config=config/eslint.config.mjs --fix",
-      "prettier -w"
+      "prettier --write"
     ],
-    "**/*.{json,css,scss,md,webmanifest}": [
-      "prettier -w"
+    "*.{json,css,scss,md,webmanifest}": [
+      "prettier --write"
     ]
   },
   "packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1",
