Separate env vars for backend and frontend API keys

--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "prisma:watch": "pnpm prisma generate --schema=src/prisma/schema.prisma --watch",
     "prisma:migrate": "prisma migrate deploy --schema=src/prisma/schema.prisma",
     "build": "prisma generate --schema=src/prisma/schema.prisma --no-hints && next build",
-    "fix": "pnpm lint --fix && pnpm format",
+    "fix": "concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" 'pnpm lint --fix' 'pnpm format'",
     "lint": "eslint --config=config/eslint.config.mjs",
     "lint:strict": "eslint --max-warnings=0 --config=config/eslint.config.mjs",
-    "format": "prettier -w .",
-    "format:check": "prettier -c .",
+    "format": "prettier -w **/*.{json,css,md,webmanifest,yml,yaml}",
+    "format:check": "prettier -c **/*.{json,css,md,webmanifest,yml,yaml}",
     "typecheck": "pnpm prisma:generate && tsc --noEmit --incremental false",
     "test": "vitest run --config=config/vitest.config.ts",
     "test:watch": "vitest --config=config/vitest.config.ts",
@@ -139,7 +139,8 @@
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.2",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-storybook": "^0.11.1",
