--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
     "chalk": "^5.3.0",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
