--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "build-storybook": "storybook build",
     "test:cleanup": "docker-compose -f src/docker/docker-compose.test.yml down",
     "setup:local": "tsx src/scripts/setup-local-dev.ts",
-    "update-packages": "tsx src/scripts/update-packages.ts"
+    "update-packages": "tsx src/scripts/update-packages.ts",
+    "serialize-repo": "tsx src/scripts/serialize-repo.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.705.0",
@@ -105,10 +106,10 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
     "tailwindcss-animate": "^1.0.7",
-    "tsx": "^4.19.2",
     "uvcanvas": "^0.2.2",
     "yet-another-react-lightbox": "^3.21.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "ignore": "^5.3.1"
   },
   "devDependencies": {
     "@actions/core": "^1.11.1",
@@ -161,6 +162,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "storybook": "^8.4.7",
     "testcontainers": "^10.16.0",
+    "tsx": "^4.19.2",
     "typescript": "~5.7.2",
     "vite-tsconfig-paths": "^4.3.2",
     "vitest": "^1.6.0"
