--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
     name: Run Vitest
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    needs: [validate]
     services:
       postgres:
         image: postgres:15
