--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,21 +14,24 @@ jobs:
     strategy:
       matrix:
         task:
-          - lint:strict
-          - typecheck
-          - format:check
+          - name: Lint
+            run: pnpm run lint:strict
+          - name: Type check
+            run: pnpm run typecheck
+          - name: Format check
+            run: pnpm run format:check
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
       - name: Setup
         uses: ./.github/actions/setup
-      - run: pnpm run ${{ matrix.task }}
+      - name: ${{ matrix.task.name }}
+        run: pnpm run ${{ matrix.task.run }}
 
   test:
     name: Run Vitest
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    needs: [validate]
     services:
       postgres:
         image: postgres:15
