--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,7 +14,7 @@ permissions:
 jobs:
   run-e2es:
     name: Playwright
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     if: github.event.deployment_status.state == 'success'
     steps:
       - name: Check if Deployment is successful
