--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -14,7 +14,7 @@ permissions:
 
 jobs:
   update-packages:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 30
     steps:
       - name: Checkout repository
