--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -15,7 +15,7 @@ permissions:
 jobs:
   update-packages:
     runs-on: ubuntu-24.04
-    timeout-minutes: 30
+    timeout-minutes: 90
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -53,7 +53,8 @@ jobs:
       - name: Check for changes
         id: git-check
         run: |
-          if [[ -n "$(git status --porcelain)" ]]; then
+          git fetch origin main
+          if [[ -n "$(git diff origin/main..HEAD)" ]]; then
             echo "changes=true" >> $GITHUB_OUTPUT
           else
             echo "changes=false" >> $GITHUB_OUTPUT
