--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@storybook/addon-themes": "^8.4.7",
     "@types/lodash": "^4.17.13",
     "@types/semver": "^7.5.8",
+    "@types/yargs": "^17.0.33",
     "@vercel/analytics": "^1.4.1",
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
@@ -106,6 +107,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss": "^3.4.16",
     "uvcanvas": "^0.2.2",
+    "yargs": "^17.7.2",
     "yet-another-react-lightbox": "^3.21.7",
     "zod": "^3.23.8"
   },
