--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -84,17 +84,30 @@ jobs:
 
       - name: Create Pull Request
         if: steps.git-check.outputs.changes == 'true'
-        uses: peter-evans/create-pull-request@v6
+        uses: actions/github-script@v7
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: 'chore(deps): update dependencies'
-          title: 'Update Dependencies'
-          body-path: package-updates-summary.md
-          branch: ${{ env.BRANCH_NAME }}
-          base: main
-          labels: |
-            dependencies
-          draft: false
+          script: |
+            import fs from 'fs';
+            const { repo, owner } = context.repo;
+            const body = fs.readFileSync('package-updates-summary.md', 'utf8').toString();
+            const result = await github.rest.pulls.create({
+              owner,
+              repo,
+              title: 'Update Dependencies',
+              body,
+              head: ${{ env.BRANCH_NAME }},
+              base: 'main'
+            });
+
+            // Add labels to the PR
+            await github.rest.issues.addLabels({
+              owner,
+              repo,
+              issue_number: result.data.number,
+              labels: ['dependencies', 'automated']
+            });
 
       - name: PR Details
         if: steps.git-check.outputs.changes == 'true'
