--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -93,6 +93,7 @@ jobs:
               owner,
               repo,
               title: 'Update Dependencies',
+              head: '${{ env.BRANCH_NAME }}',
               body,
               base: 'main'
             });
