--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
   "files.exclude": {
     "build": true,
     "node_modules": true,
+    "repo-serialized/**": true,
     ".pnpm-store": true,
     "out": true,
     ".next": true,
@@ -25,6 +26,7 @@
   },
   "search.exclude": {
     "build": true,
+    "repo-serialized/**": true,
     "node_modules": true,
     ".pnpm-store": true,
     "out": true,
