--- a/.github/workflows/update-packages.yml
+++ b/.github/workflows/update-packages.yml
@@ -67,15 +67,11 @@ jobs:
       - name: Check for changes
         id: git-check
         run: |
-          git fetch origin main
-          git checkout origin/main
-          OUTDATED_EXIT_CODE=0
-          pnpm outdated || OUTDATED_EXIT_CODE=$?
-
-          if [[ -n "$(git diff origin/main..HEAD)" ]] || [[ $OUTDATED_EXIT_CODE -eq 1 ]]; then
-            echo "changes=true" >> $GITHUB_OUTPUT
-          else
+          # if branch is the same as main, then no changes
+          if git diff --quiet origin/main..HEAD; then
             echo "changes=false" >> $GITHUB_OUTPUT
+          else
+            echo "changes=true" >> $GITHUB_OUTPUT
           fi
 
       - name: Push changes
