--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "docker:clean": "docker-compose -f src/docker/docker-compose.yml down -v",
     "docker:down": "docker-compose -f src/docker/docker-compose.yml down",
     "docker:build": "docker-compose -f src/docker/docker-compose.yml build",
+    "docker:prod:rebuild": "docker-compose -f src/docker/docker-compose.yml build app_prod",
+    "docker:prod:restart": "docker-compose -f src/docker/docker-compose.yml up -d --no-deps app_prod",
+    "docker:prod:redeploy": "pnpm docker:prod:rebuild && pnpm docker:prod:restart",
     "next:start": "next start",
     "predev": "pnpm prisma:generate && pnpm prisma:migrate",
     "dev": "concurrently --color --prefix-colors \"blue.bold,magenta.bold,green.bold,yellow.bold,cyan.bold\" npm:dev:*",
