--- a/package.json
+++ b/package.json
@@ -112,7 +112,8 @@
     "uvcanvas": "^0.2.2",
     "yargs": "^17.7.2",
     "yet-another-react-lightbox": "^3.21.7",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zod-prisma-types": "^3.2.1"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.1",
@@ -166,11 +167,10 @@
     "tsx": "^4.19.2",
     "typescript": "~5.7.2",
     "vite-tsconfig-paths": "^4.3.2",
-    "zod-prisma": "^0.5.4",
     "vitest": "^2.1.8"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "*.{js,jsx,ts,tsx},!src/prisma/zod/**": [
       "pnpm prisma:generate",
       "eslint --max-warnings=0 --config=config/eslint.config.mjs --fix --cache",
       "prettier --write"
