--- a/src/docker/Dockerfile.dev
+++ b/src/docker/Dockerfile.dev
@@ -25,7 +25,7 @@ RUN --mount=type=cache,target=/home/node/.pnpm-store,id=pnpm-store \
   pnpm install --offline --frozen-lockfile
 
 ENV NODE_ENV=development \
-  NODE_OPTIONS=--no-warnings
+  NODE_OPTIONS='--max-old-space-size=4096 --no-warnings'
 
 EXPOSE 3000 6006 5555
 
