--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "docker:prod": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_prod"
   },
   "dependencies": {
+    "@adobe/react-spectrum": "^3.38.1",
     "@aws-sdk/client-s3": "^3.717.0",
     "@aws-sdk/s3-request-presigner": "^3.717.0",
     "@dnd-kit/core": "^6.3.1",
@@ -120,6 +121,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.49.1",
+    "@react-types/provider": "^3.8.5",
     "@storybook/addon-essentials": "^8.4.7",
     "@storybook/addon-interactions": "^8.4.7",
     "@storybook/addon-links": "^8.4.7",
