--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,42 +125,15 @@ jobs:
               core.setOutput('pr_number', commits.data[0].number);
             }
 
-      - name: Update PR Comment
-        if: steps.find-pr.outputs.pr_number
-        uses: actions/github-script@v7
-        env:
-          PR_NUMBER: ${{ steps.find-pr.outputs.pr_number }}
+      - name: Update PR Comment for E2E
+        if: always() && steps.find-pr.outputs.pr_number
+        uses: ./.github/actions/update-pr-comment
         with:
-          script: |
-            const deploymentUrl = '${{ github.event.deployment_status.target_url }}';
-            const comment = `### E2E Tests 🔄\n\nRunning tests against [${deploymentUrl}](${deploymentUrl})...\n\n`;
-
-            const { data: comments } = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: Number(process.env.PR_NUMBER),
-            });
-
-            const botComment = comments.find(c => 
-              c.user.type === 'Bot' && 
-              c.body.includes('E2E Tests')
-            );
-
-            if (botComment) {
-              await github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: botComment.id,
-                body: comment
-              });
-            } else {
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: Number(process.env.PR_NUMBER),
-                body: comment
-              });
-            }
+          pr_number: ${{ steps.find-pr.outputs.pr_number }}
+          test_status: ${{ steps.test-run.outcome }}
+          report_url: ${{ fromJSON(steps.upload-results.outputs.object_locations)[0] }}/index.html
+          test_type: 'E2E'
+          deployment_url: ${{ github.event.deployment_status.target_url }}
 
       - name: Run E2E Tests
         id: test-run
@@ -179,7 +152,7 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_bucket: apadana-e2e
           source_dir: '.next/playwright-report'
-          destination_dir: ${{ github.sha }}
+          destination_dir: ${{ github.sha }}/e2e/html
 
       - name: Update Final PR Comment
         if: always() && steps.find-pr.outputs.pr_number && steps.upload-results.outputs.object_locations
@@ -226,3 +199,52 @@ jobs:
                 body: comment
               });
             }
+
+  storybook:
+    name: Storybook Screenshots
+    needs: [test]
+    runs-on: ubuntu-24.04
+    if: github.event_name != 'deployment_status'
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/setup
+
+      - name: Find PR number
+        id: find-pr
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { owner, repo } = context.repo;
+            const commits = await github.rest.repos.listPullRequestsAssociatedWithCommit({
+              owner,
+              repo,
+              commit_sha: context.sha,
+            });
+            if (commits.data.length > 0) {
+              core.setOutput('pr_number', commits.data[0].number);
+            }
+
+      - name: Test Storybook
+        id: test-run
+        run: pnpm run test:storybook
+
+      - name: Upload Storybook Results
+        if: always() && hashFiles('storybook-e2e-html-report/**') != ''
+        id: upload-results
+        uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_key_id: ${{ secrets.AWS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_bucket: apadana-e2e
+          source_dir: 'storybook-e2e-html-report'
+          destination_dir: ${{ github.sha }}/storybook/html
+
+      - name: Update PR Comment for Storybook
+        if: always() && steps.find-pr.outputs.pr_number
+        uses: ./.github/actions/update-pr-comment
+        with:
+          pr_number: ${{ steps.find-pr.outputs.pr_number }}
+          test_status: ${{ steps.test-run.outcome }}
+          report_url: ${{ fromJSON(steps.upload-results.outputs.object_locations)[0] }}/index.html
+          test_type: 'Storybook'
