--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
     "update-packages": "tsx src/scripts/update-packages.ts",
     "serialize-repo": "tsx src/scripts/serialize-repo.ts",
     "docker:dev": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_dev",
-    "docker:prod": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_prod"
+    "docker:prod": "DOCKER_BUILDKIT=1 docker-compose -f src/docker/docker-compose.yml up app_prod",
+    "test:storybook": "playwright test --config=config/playwright.storybook.config.ts",
+    "test:storybook:update": "playwright test --config=config/playwright.storybook.config.ts --update-snapshots"
   },
   "dependencies": {
     "@adobe/react-spectrum": "^3.38.1",
@@ -93,6 +95,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "fast-glob": "^3.3.2",
     "framer-motion": "^11.15.0",
     "ignore": "^7.0.0",
     "lodash": "^4.17.21",
@@ -136,6 +139,7 @@
     "@testcontainers/postgresql": "^10.16.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
+    "@types/glob": "^8.1.0",
     "@types/node": "^22.10.2",
     "@types/qs": "^6.9.17",
     "@types/react": "npm:types-react@19.0.0-rc.1",
@@ -157,6 +161,7 @@
     "eslint-plugin-storybook": "^0.11.1",
     "eslint-plugin-unused-imports": "^4.1.4",
     "execa": "^9.5.2",
+    "glob": "^10.3.10",
     "globals": "^15.14.0",
     "happy-dom": "^15.11.7",
     "husky": "^9.1.7",
